# computer-use-mcp

./: -  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC-v4.md  package-lock.json  package.json  test-v5-e2e.mjs  test-v5-smoke.mjs  tsconfig.json
.github/workflows/: ci.yml
agents/: README.md
agents/adk-rust-gemini/: Cargo.toml  README.md
agents/adk-rust-gemini/src/: main.rs
agents/claude-agent/: agent.mjs
agents/langchain-agent/: agent.mjs
agents/openai-agent/: agent.mjs
benchmarks/: compare.mjs
docs/specs/: SPEC-v3.md  SPEC-v6.md
examples/: README.md  browser-test.ts  crypto-numbers.ts  demo-v4.ts  demo.ts
examples/macos/: zoom.mjs  (+14 more)
native/: Cargo.toml  build.rs
native/src/: accessibility.rs  accessibility_macos.rs  apps.rs  clipboard.rs  display.rs  keyboard.rs  lib.rs  mouse.rs  screenshot.rs  spaces.rs  spaces_macos.rs  windows.rs  windows_macos.rs
scripts/: README.md  capture-plus-coords.mjs  capture-plus-v2.mjs  test-ax-approach.mjs  test-mc-ax.mjs  test-mc-reveal.mjs  test-mc-screenshot.mjs  test-mc-strip.mjs  test-plus-from-below.mjs  test-return.mjs  test-space-create.mjs  test-space-diag.mjs  test-space-diag2.mjs  test-space-gesture.mjs  test-space-open.mjs  test-v5-spaces.mjs
src/: browser-test.ts  client.ts  crypto-numbers.ts  demo-v4.ts  demo.ts  native.ts  server.ts  session.ts
test/: session.test.mjs  smoke-new-tools.mjs  smoke-windows.mjs  stdio.test.mjs  v5-session.test.mjs  v5.2-lock-pump.test.mjs  v5.2-prepare-display.test.mjs  v5.2-tool-metadata.test.mjs  verify-macos-parity.mjs
(+25 files in other folders)
