[package]
name = "computer-use-napi"
version = "1.0.0"
edition = "2021"
authors = ["James Karanja Maina <james@zavora.ai>"]
description = "Rust NAPI native module for computer-use-mcp"
license = "MIT"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(cargo_clippy)'] }

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi9", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core-graphics = "0.24"
core-graphics-types = "0.2"
core-foundation = "0.10"
objc = "0.2"
base64 = "0.22"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 2
strip = "symbols"
