[package]
name = "desktop-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
adk-rust = { version = "0.7", features = ["tools", "gemini"] }
adk-tool = { version = "0.7", features = ["http-transport"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
